@@ -1,11 +1,7 @@
 package com.ds4h.model.alignment.preprocessImage;
 
-import com.ds4h.model.alignment.AlignmentAlgorithm;
-import com.ds4h.model.alignment.automatic.SurfAlignment;
-import com.ds4h.model.alignment.manual.AffineAlignment;
-import com.ds4h.model.alignment.manual.PerspectiveAlignment;
-import com.ds4h.model.alignment.manual.RansacAlignment;
-import com.ds4h.model.alignment.manual.TranslationalAlignment;
+import com.ds4h.model.alignment.ManualAlgorithm;
+import com.ds4h.model.alignment.automatic.AbstractAutomaticAlignment;
 import com.ds4h.model.imagePoints.ImagePoints;
 import com.ds4h.model.util.ImagingConversion;
 import com.ds4h.model.util.Pair;
@@ -21,42 +17,21 @@ import java.util.stream.Collectors;
 
 public class TargetImagePreprocessing {
 
-    private final Queue<Pair<Point, Mat>> queuePoints = new LinkedList<>();
     //Image -> Punti del target
     private final Map<ImagePoints, MatOfPoint2f> map = new HashMap<>();
-    private Mat lastTargetImage = null;
+    private  Mat lastTargetImage = null;
     private final static String DIRECTORY_NAME = "DS4H_processedTarget";
     private final static String TMP_PATH = System.getProperty("java.io.tmpdir");
     public TargetImagePreprocessing(){}
-    static public ImagePoints process(final ImagePoints targetImage, final List<ImagePoints> imagesToAlign, final AlignmentAlgorithm algorithm) throws IllegalArgumentException{
-        Pair<Mat, MatOfPoint2f> target = new Pair<>(targetImage.getMatImage(),targetImage.getMatOfPoint());
 
-        for (final ImagePoints image : imagesToAlign) {
-            target = TargetImagePreprocessing.singleProcess(target.getFirst(), target.getSecond(), targetImage, image, algorithm);
-        }
-        final String directoryName = DirectoryCreator.createTemporaryDirectory(TargetImagePreprocessing.DIRECTORY_NAME);
-        final Optional<ImagePlus> imagePlus = ImagingConversion.fromMatToImagePlus(target.getFirst(),targetImage.getFile().getName());
-        if(imagePlus.isPresent()){
-            imagePlus.get().setTitle(targetImage.getFile().getName());
-            SaveImages.save(imagePlus.get(), TargetImagePreprocessing.TMP_PATH + "/" + directoryName);
-            final ImagePoints result = new ImagePoints(new File(TargetImagePreprocessing.TMP_PATH + "/" +directoryName+"/" + targetImage.getFile().getName()));
-            target.getSecond().toList().forEach(result::addPoint);
-            return result;
-        }else{
-            throw new IllegalArgumentException("the file doesn't exist");
-        }
-
-    }
-
-    private static Pair<Mat,MatOfPoint2f> singleProcess(final Mat targetMat, final MatOfPoint2f targetPoints, final ImagePoints targetImage,  final ImagePoints imagePoints, final AlignmentAlgorithm algorithm) {
-        try {
+    private Mat manualProcess(final ImagePoints targetImage, final List<ImagePoints> imagesPoints, final ManualAlgorithm manualAlgorithm) {
+        this.lastTargetImage = targetImage.getMatImage();
+        for (final ImagePoints imagePoints : imagesPoints) {
             final Mat imageToShiftMat = imagePoints.getMatImage();
 
-            final Point[] srcArray = targetPoints.toArray();
-            final Point[] dstArray = imagePoints.getMatOfPoint().toArray();
-            final Mat translationMatrix = algorithm.getTransformationMatrix(imagePoints, targetImage);
-            final int h1 = targetMat.rows();
-            final int w1 = targetMat.cols();
+            final Mat translationMatrix = manualAlgorithm.getTransformationMatrix(imagePoints, targetImage);
+            final int h1 = lastTargetImage.rows();
+            final int w1 = lastTargetImage.cols();
             final int h2 = imageToShiftMat.rows();
             final int w2 = imageToShiftMat.cols();
 
@@ -64,7 +39,7 @@ public class TargetImagePreprocessing {
             final MatOfPoint2f pts2 = new MatOfPoint2f(new Point(0, 0), new Point(0, h2), new Point(w2, h2), new Point(w2, 0));
             final MatOfPoint2f pts2_ = new MatOfPoint2f();
 
-            algorithm.transform(pts2, pts2_, translationMatrix);
+            manualAlgorithm.transform(pts2, pts2_, translationMatrix);
 
             final MatOfPoint2f pts = new MatOfPoint2f();
             Core.hconcat(Arrays.asList(pts1, pts2_), pts);
@@ -81,33 +56,36 @@ public class TargetImagePreprocessing {
 
                 final Size s = new Size(xmax - xmin, ymax - ymin);
                 final Mat alignedImage = Mat.zeros(s, imageToShiftMat.type());
-                targetMat.copyTo(alignedImage.submat(new Rect((int) t[0], (int) t[1], w1, h1)));
+                lastTargetImage.copyTo(alignedImage.submat(new Rect((int) t[0], (int) t[1], w1, h1)));
+                this.lastTargetImage = alignedImage;
                 final MatOfPoint2f points = new MatOfPoint2f();
-                points.fromList(targetPoints.toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
-                return new Pair<>(alignedImage, points);
-            }else{
-                throw new IllegalArgumentException("Please check your images.");
+                System.out.println("INSIDE PREPROCESS: " + targetImage.getMatOfPoint());
+                points.fromList(targetImage.getMatOfPoint().toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
+                this.map.entrySet().parallelStream().forEach(entry -> {
+                    entry.getValue().fromList(entry.getValue().toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
+                });
+                this.map.put(imagePoints, points);
+                System.out.println("FINAL MAP : " + this.map);
             }
-        }catch (Exception ex){
-            throw ex;
         }
+        return this.lastTargetImage;
     }
 
-    public Pair<Mat, Map<ImagePoints, MatOfPoint2f>> automaticProcess(final Mat targetMat, final MatOfPoint2f targetPoints, final ImagePoints targetImage,
-                                 final List<ImagePoints> imagesPoints, final AlignmentAlgorithm algorithm,
-                                 final SurfAlignment s){
-        for(final ImagePoints imagePoints : imagesPoints) {
+    private Mat automaticProcess(final ImagePoints targetImage, final List<ImagePoints> imagesPoints, final AbstractAutomaticAlignment automaticAlignment){
+        for(final ImagePoints i : imagesPoints) {
+            final ImagePoints imagePoints = new ImagePoints(i.getFile());
+            final ImagePoints newTarget = new ImagePoints(targetImage.getFile());
             if (lastTargetImage != null) {
-                s.getPointDetector().detectPoint(lastTargetImage, imagePoints);
+                automaticAlignment.detectPoint(lastTargetImage, imagePoints);
             } else {
-                this.lastTargetImage = targetMat;
-                s.getPointDetector().detectPoint(targetMat, imagePoints);
+                this.lastTargetImage = targetImage.getMatImage();
+                automaticAlignment.detectPoint(newTarget.getMatImage(), imagePoints);
             }
-            final Point[] srcArray = targetPoints.toArray();
-            final Point[] dstArray = imagePoints.getMatOfPoint().toArray();
-            final Mat translationMatrix = algorithm.getTransformationMatrix(imagePoints, targetImage);
-            final int h1 = targetMat.rows();
-            final int w1 = targetMat.cols();
+            automaticAlignment.mergePoint(newTarget, imagePoints);
+            final Mat translationMatrix = automaticAlignment.getTransformationMatrix(newTarget, imagePoints);
+            System.out.println(translationMatrix);
+            final int h1 = lastTargetImage.rows();
+            final int w1 = lastTargetImage.cols();
             final int h2 = imagePoints.getMatImage().rows();
             final int w2 = imagePoints.getMatImage().cols();
 
@@ -115,7 +93,7 @@ public class TargetImagePreprocessing {
             final MatOfPoint2f pts2 = new MatOfPoint2f(new Point(0, 0), new Point(0, h2), new Point(w2, h2), new Point(w2, 0));
             final MatOfPoint2f pts2_ = new MatOfPoint2f();
 
-            algorithm.transform(pts2, pts2_, translationMatrix);
+            automaticAlignment.transform(pts2, pts2_, translationMatrix);
 
             final MatOfPoint2f pts = new MatOfPoint2f();
             Core.hconcat(Arrays.asList(pts1, pts2_), pts);
@@ -132,17 +110,44 @@ public class TargetImagePreprocessing {
 
                 final Size size = new Size(xmax - xmin, ymax - ymin);
                 final Mat aligneImage = Mat.zeros(size, targetImage.getMatImage().type());
-                targetMat.copyTo(aligneImage.submat(new Rect((int) t[0], (int) t[1], w1, h1)));
+                this.lastTargetImage.copyTo(aligneImage.submat(new Rect((int) t[0], (int) t[1], w1, h1)));
                 this.lastTargetImage = aligneImage;
+
                 final MatOfPoint2f points = new MatOfPoint2f();
-                points.fromList(targetPoints.toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
+                System.out.println("INSIDE PREPROCESS: " + newTarget.getMatOfPoint());
+                points.fromList(newTarget.getMatOfPoint().toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
                 this.map.entrySet().parallelStream().forEach(entry -> {
-                    entry.getValue().fromList(targetPoints.toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
+                    entry.getValue().fromList(entry.getValue().toList().stream().map(p -> new Point(p.x + t[0], p.y + t[1])).collect(Collectors.toList()));
                 });
                 this.map.put(imagePoints, points);
             }
         }
-        System.out.println("dio cane");
-        return new Pair<>(this.lastTargetImage, this.map);
+        return this.lastTargetImage;
     }
+
+
+    public Pair<ImagePoints, Map<ImagePoints, MatOfPoint2f>> processAutomaticImage(final ImagePoints targetImage, final List<ImagePoints> imagesToAlign, final AbstractAutomaticAlignment algorithm) throws Exception {
+        this.map.clear();
+        final Mat finalTargetMat = this.automaticProcess(targetImage, imagesToAlign, algorithm);
+        return new Pair<>(this.saveProcessedImage(finalTargetMat, targetImage.getFile().getName()), this.map);
+    }
+    public Pair<ImagePoints, Map<ImagePoints, MatOfPoint2f>> processManualImage(final ImagePoints targetImage, final List<ImagePoints> imagesToAlign, final ManualAlgorithm algorithm) throws Exception {
+        this.map.clear();
+        final Mat finalTargetMat = this.manualProcess(targetImage, imagesToAlign, algorithm);
+        return new Pair<>(this.saveProcessedImage(finalTargetMat, targetImage.getFile().getName()), this.map);
+    }
+
+    private ImagePoints saveProcessedImage(final Mat finalTarget, final String fileName) throws Exception {
+        final String directoryName = DirectoryCreator.createTemporaryDirectory(TargetImagePreprocessing.DIRECTORY_NAME);
+        final Optional<ImagePlus> imagePlus = ImagingConversion.fromMatToImagePlus(finalTarget, fileName);
+        if(imagePlus.isPresent()) {
+            imagePlus.get().setTitle(fileName);
+            SaveImages.save(imagePlus.get(), TargetImagePreprocessing.TMP_PATH + "/" + directoryName);
+            imagePlus.get().show();
+            return new ImagePoints(new File(TargetImagePreprocessing.TMP_PATH + "/" + directoryName + "/" +
+                    fileName));
+        }
+        throw new Exception("");
+    }
+
 }
